fix font on mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -160,6 +160,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
     min-height: 300px
   .column.is-4
     width: 50%
+  a.courses
+    font-family: Harmattan
 
 +mobile
   .body
@@ -189,7 +191,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
     flex-grow: 1
     flex-shrink: 1
     padding: 0.75rem
-    margin: 13px
+    margin: 0px
   a.courses
     font-family: Harmattan
   .marquee
